[package]
name = "rocket_reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.20.1", features = ["macros"]}
notify-rust = "4.5.8"
winrt-notification = {git = "https://github.com/Akida31/winrt-notification"}
http = "0.2"
reqwest = { version = "0.11", features = ["blocking","json","stream"] }
futures-core = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1.0.126"
chrono = "0.4.22"
webbrowser = "0.7.1"
filepath = "0.1.2"
passionfruit = "1.1.0"
dunce = "1.0.2"
nanoid = "0.4.0"